--- a/index.html
+++ b/index.html
@@ -3,96 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EDOGRA - Pedidos</title>
+    <title>EDOGRA - Sistema de Pedidos</title>
     <style>
-        :root { --azul: #007bff; --verde: #25d366; --gris: #f8f9fa; }
-        body { font-family: sans-serif; background: var(--gris); margin: 0; padding: 10px; }
-        .card { max-width: 500px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-        .header { text-align: center; margin-bottom: 15px; }
-        .logo { width: 120px; height: auto; }
-        h2 { color: var(--azul); margin: 5px 0; }
-        input { width: 100%; padding: 10px; margin: 5px 0; border: 1px solid #ccc; border-radius: 6px; box-sizing: border-box; }
-        #search { background: #fffde7; border: 2px solid var(--azul); font-weight: bold; }
-        .lista { max-height: 350px; overflow-y: auto; border: 1px solid #eee; padding: 5px; margin-top: 10px; }
-        .item { display: flex; justify-content: space-between; align-items: center; padding: 10px 0; border-bottom: 1px solid #eee; }
-        .item-info { flex: 1; font-size: 0.9em; }
-        .qty { width: 65px !important; text-align: center; border: 2px solid var(--azul) !important; font-weight: bold; }
-        .footer { position: sticky; bottom: 0; background: white; padding: 15px; border-top: 3px solid var(--azul); margin-top: 10px; }
-        .total-box { display: flex; justify-content: space-between; font-size: 1.3em; font-weight: bold; color: var(--azul); margin-bottom: 10px; }
-        .btn-ws { background: var(--verde); color: white; border: none; width: 100%; padding: 15px; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 1.1em; }
+        :root { --azul: #007bff; --verde: #25d366; --gris: #f4f7f6; }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--gris); margin: 0; padding: 10px; }
+        .card { max-width: 550px; margin: auto; background: white; padding: 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
+        .header { text-align: center; margin-bottom: 15px; border-bottom: 2px solid var(--azul); padding-bottom: 10px; }
+        .logo { width: 140px; height: auto; }
+        h2 { color: var(--azul); margin: 5px 0; font-size: 1.4em; }
+        input { width: 100%; padding: 12px; margin: 6px 0; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; font-size: 1em; }
+        #search { background: #fffde7; border: 2px solid var(--azul); font-weight: bold; position: sticky; top: 0; z-index: 10; }
+        .lista { max-height: 450px; overflow-y: auto; border: 1px solid #eee; padding: 5px; margin-top: 10px; border-radius: 8px; }
+        .item { display: flex; justify-content: space-between; align-items: center; padding: 12px 5px; border-bottom: 1px solid #f0f0f0; }
+        .item:last-child { border-bottom: none; }
+        .item-info { flex: 1; font-size: 0.85em; color: #333; padding-right: 10px; }
+        .item-info b { display: block; font-size: 1.05em; color: #000; }
+        .qty { width: 75px !important; text-align: center; border: 2px solid var(--azul) !important; font-weight: bold; background: #e3f2fd; }
+        .footer { position: sticky; bottom: 0; background: white; padding: 15px; border-top: 3px solid var(--azul); margin-top: 15px; border-radius: 0 0 12px 12px; }
+        .total-box { display: flex; justify-content: space-between; font-size: 1.4em; font-weight: bold; color: var(--azul); margin-bottom: 12px; }
+        .btn-ws { background: var(--verde); color: white; border: none; width: 100%; padding: 16px; border-radius: 10px; font-weight: bold; cursor: pointer; font-size: 1.1em; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        .btn-ws:active { transform: scale(0.98); }
     </style>
 </head>
 <body>
 
 <div class="card">
     <div class="header">
-        <img src="edogra.png" alt="EDOGRA" class="logo">
+        <img src="edogra.png" alt="Logo EDOGRA" class="logo">
         <h2>EDOGRA DISTRIBUCIONES</h2>
-        <div id="fecha" style="font-size: 0.8em; color: #666;"></div>
+        <div id="fecha" style="font-size: 0.85em; color: #666; font-weight: bold;"></div>
     </div>
 
     <input type="text" id="cliente" placeholder="Nombre del Cliente">
     <input type="text" id="tienda" placeholder="Nombre de la Tienda">
-    <input type="text" id="dir" placeholder="Dirección (Calle, Barrio, Ciudad)">
-    <input type="text" id="vend" placeholder="Vendedor que atiende">
+    <input type="text" id="dir" placeholder="Dirección completa y Ciudad">
+    <input type="text" id="vend" placeholder="Nombre del Vendedor">
 
-    <hr>
     <input type="text" id="search" placeholder="🔍 BUSCAR PRODUCTO..." onkeyup="filtrar()">
 
-    <div class="lista" id="lista"></div>
+    <div class="lista" id="lista">
+        </div>
 
     <div class="footer">
         <div class="total-box">
-            <span>TOTAL:</span>
+            <span>TOTAL PEDIDO:</span>
             <span id="totalDisplay">$0</span>
         </div>
-        <button class="btn-ws" onclick="enviar()">🚀 ENVIAR A WHATSAPP</button>
-        <p style="text-align: center; font-size: 0.7em; color: #999; margin-top: 10px;">App desarrollada por Vibras Positivas</p>
+        <button class="btn-ws" onclick="enviar()">🚀 ENVIAR FACTURA A WHATSAPP</button>
+        <p style="text-align: center; font-size: 0.75em; color: #888; margin-top: 10px;">
+            App Desarrollada por <b>Vibras Positivas</b>
+        </p>
     </div>
 </div>
 
 <script>
-    // LISTA COMPLETA DE TUS FOTOS
-    const DB = [
+    // BASE DE DATOS COMPLETA EXTRAÍDA DE TUS IMÁGENES
+    const PRODUCTOS = [
+        // DETERGENTES
         { id: 1, n: "Detergente 3D *125GR PC*96", p: 1335 },
         { id: 2, n: "Detergente 3D *1KL PC*12", p: 7565 },
         { id: 3, n: "Detergente 3D *250GR PC*24", p: 2580 },
         { id: 4, n: "Detergente 3D *2KL PC*6", p: 15115 },
         { id: 5, n: "Detergente 3D *3KL PC*4", p: 22020 },
-        { id: 6, n: "Detergente Fab *450GR PC*30", p: 5345 },
-        { id: 7, n: "Detergente Ultrex *125GR PC*96", p: 755 },
-        { id: 8, n: "Detergente Ultrex *1KL PC*20", p: 5560 },
-        { id: 9, n: "Detergente Ultrex Manz *500GR PC*40", p: 2800 },
-        { id: 10, n: "Blanqueador Patojito *1000ML CJ*18", p: 51465 },
-        { id: 11, n: "Blanqueador Patojito *1800ML CJ*12", p: 59545 },
-        { id: 12, n: "Desmanc Ropa Blanca Pat *1000ML CJ*18", p: 6115 },
-        { id: 13, n: "Desmanc Ropa Color Pat *450ML CJ*24", p: 2655 },
-        { id: 14, n: "Suavizante Suavitel *1LT CJ*12", p: 8350 },
-        { id: 15, n: "Suavizante Aromatel *900ML CJ*12", p: 8900 },
-        { id: 16, n: "Jabon Rey *300GR CJ*25", p: 72555 },
-        { id: 17, n: "Jabon Caiman Azul *230GR CJ*25", p: 42225 },
-        { id: 18, n: "Lavaloza Axion Barra *150GR CJ*72", p: 2225 },
-        { id: 19, n: "Lavaloza Axion Barra *450GR CJ*24", p: 6170 },
-        { id: 20, n: "Lavaloza Patojito *450GR CJ*36", p: 3695 }
+        { id: 6, n: "Detergente 3D *500GR PC*22", p: 4005 },
+        { id: 7, n: "Detergente Barra Dersa *250GR CJ*2", p: 65075 },
+        { id: 8, n: "Detergente Fab *100GR PC*112", p: 1425 },
+        { id: 9, n: "Detergente Fab *225GR PC*54", p: 2910 },
+        { id: 10, n: "Detergente Fab *450GR PC*30", p: 5345 },
+        { id: 11, n: "Detergente Fab *4KL PC*4", p: 42770 },
+        { id: 12, n: "Detergente Fab *5KL PC*3", p: 44160 },
+        { id: 13, n: "Detergente Fab *700GR PC*18", p: 8010 },
+        { id: 14, n: "Detergente Ultrex *125GR PC*96", p: 755 },
+        { id: 15, n: "Detergente Ultrex *1KL PC*20", p: 5560 },
+        { id: 16, n: "Detergente Ultrex *250GR PC*48", p: 1740 },
+        { id: 17, n: "Detergente Ultrex *2KL PC*8", p: 11920 },
+        { id: 18, n: "Detergente Ultrex *3KL PC*6", p: 15460 },
+        { id: 19, n: "Detergente Ultrex *500GR PC*40", p: 2800 },
+        { id: 20, n: "Detergente Ultrex Manz *125GR PC*96", p: 755 },
+        { id: 21, n: "Detergente Ultrex Manz *3KL PC*6", p: 15080 },
+        { id: 22, n: "Detergente Ultrex Manz *500GR PC*40", p: 2800 },
+        // BLANQUEADORES Y LIMPIAPISOS
+        { id: 23, n: "Blanqueador Patojito *1000ML CJ*18", p: 51465 },
+        { id: 24, n: "Blanqueador Patojito *1800ML CJ*12", p: 59545 },
+        { id: 25, n: "Blanqueador Patojito *3700ML CJ*6", p: 58345 },
+        { id: 26, n: "Blanqueador Patojito *450ML CJ*24", p: 25090 },
+        { id: 27, n: "Desmanc Ropa Blanca Pat *1000ML CJ*18", p: 6115 },
+        { id: 28, n: "Desmanc Ropa Color Pat *1000ML CJ*18", p: 5445 },
+        { id: 29, n: "Desmanc Ropa Color Pat *450ML CJ*24", p: 2655 },
+        // SUAVIZANTES
+        { id: 30, n: "Quita Manchas Ultrex *150ML CJ*12", p: 1360 },
+        { id: 31, n: "Quita Manchas Ultrex *450ML CJ*12", p: 3190 },
+        { id: 32, n: "Suavizante Aromatel *180ML CJ*36", p: 1605 },
+        { id: 33, n: "Suavizante Aromatel *2500ML CJ*6", p: 19140 },
+        { id: 34, n: "Suavizante Aromatel *400ML CJ*24", p: 2575 },
+        { id: 35, n: "Suavizante Aromatel *900ML CJ*12", p: 8900 },
+        { id: 36, n: "Suavizante Suavitel *1LT CJ*12", p: 8350 },
+        { id: 37, n: "Suavizante Suavitel *430ML CJ*24", p: 3010 },
+        { id: 38, n: "Suavizante Ultrex *900ML DP CJ*12", p: 4480 },
+        { id: 39, n: "Suavizante Patojito *180ML CJ*48", p: 1200 },
+        // LAVALOZA Y JABÓN EN BARRA
+        { id: 40, n: "Jabon Caiman Azul *230GR CJ*25", p: 42225 },
+        { id: 41, n: "Jabon Caiman Blanco *230GR CJ*25", p: 46670 },
+        { id: 42, n: "Jabon Rey *300GR CJ*25", p: 72555 },
+        { id: 43, n: "Jabon Top Terra *230GR CJ*25", p: 65325 },
+        { id: 44, n: "Lavaloza Axion Barra *150GR CJ*72", p: 2225 },
+        { id: 45, n: "Lavaloza Axion Barra *450GR CJ*24", p: 6170 },
+        { id: 46, n: "Lavaloza Axion Barra *850GR CJ*12", p: 11575 },
+        { id: 47, n: "Lavaloza Liquido 123 *500ML CJ*12", p: 3195 },
+        { id: 48, n: "Lavaloza Patojito *235GR CJ*36", p: 2280 },
+        { id: 49, n: "Lavaloza Patojito *450GR CJ*36", p: 3695 },
+        { id: 50, n: "Lavaloza Patojito *850GR CJ*18", p: 7485 }
     ];
 
-    function mostrarFecha() {
-        const ahora = new Date();
-        document.getElementById('fecha').innerText = ahora.toLocaleString('es-CO', { timeZone: 'America/Bogota' });
+    function updateDate() {
+        const opciones = { timeZone: 'America/Bogota', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+        document.getElementById('fecha').innerText = new Date().toLocaleString('es-CO', opciones);
     }
-    mostrarFecha();
+    setInterval(updateDate, 60000);
+    updateDate();
 
-    const listaDiv = document.getElementById('lista');
-    DB.forEach(p => {
-        const d = document.createElement('div');
-        d.className = 'item';
-        d.setAttribute('data-n', p.n.toLowerCase());
-        d.innerHTML = `
-            <div class="item-info"><b>${p.n}</b><br>$${p.p.toLocaleString()}</div>
-            <input type="number" class="qty" id="p-${p.id}" oninput="calc()" placeholder="0">
-        `;
-        listaDiv.appendChild(d);
-    });
+    const container = document.getElementById('lista');
+    function render() {
+        PRODUCTOS.forEach(p => {
+            const div = document.createElement('div');
+            div.className = 'item';
+            div.setAttribute('data-n', p.n.toLowerCase());
+            div.innerHTML = `
+                <div class="item-info"><b>${p.n}</b>$${p.p.toLocaleString()} / Unidad</div>
+                <input type="number" class="qty" id="qty-${p.id}" placeholder="0" oninput="calc()">
+            `;
+            container.appendChild(div);
+        });
+    }
 
     function filtrar() {
         const q = document.getElementById('search').value.toLowerCase();
@@ -103,51 +145,53 @@
 
     function calc() {
         let total = 0;
-        DB.forEach(p => {
-            const q = document.getElementById(`p-${p.id}`).value || 0;
+        PRODUCTOS.forEach(p => {
+            const q = document.getElementById(`qty-${p.id}`).value || 0;
             total += q * p.p;
         });
         document.getElementById('totalDisplay').innerText = `$${total.toLocaleString()}`;
     }
 
     function enviar() {
-        const c = document.getElementById('cliente').value;
-        const t = document.getElementById('tienda').value;
-        const d = document.getElementById('dir').value;
-        const v = document.getElementById('vend').value;
-        const f = document.getElementById('fecha').innerText;
+        const cli = document.getElementById('cliente').value;
+        const tie = document.getElementById('tienda').value;
+        const dir = document.getElementById('dir').value;
+        const ven = document.getElementById('vend').value;
+        const fec = document.getElementById('fecha').innerText;
 
-        if(!c || !t || !d) return alert("Completa Cliente, Tienda y Dirección");
+        if(!cli || !tie || !dir) return alert("Por favor llena Nombre, Tienda y Dirección.");
 
         let msg = `*FACTURA DE PEDIDO - EDOGRA*\n`;
         msg += `--------------------------------\n`;
-        msg += `*Fecha:* ${f}\n`;
-        msg += `*Cliente:* ${c}\n`;
-        msg += `*Tienda:* ${t}\n`;
-        msg += `*Dirección:* ${d}\n`;
-        msg += `*Vendedor:* ${v}\n`;
+        msg += `*Fecha:* ${fec}\n`;
+        msg += `*Cliente:* ${cli}\n`;
+        msg += `*Tienda:* ${tie}\n`;
+        msg += `*Dirección:* ${dir}\n`;
+        msg += `*Vendedor:* ${ven}\n`;
         msg += `--------------------------------\n\n`;
 
-        let total = 0;
-        DB.forEach(p => {
-            const q = document.getElementById(`p-${p.id}`).value;
+        let subtotal = 0;
+        PRODUCTOS.forEach(p => {
+            const q = document.getElementById(`qty-${p.id}`).value;
             if(q > 0) {
                 const sub = q * p.p;
-                msg += `🔹 ${p.n}\n   Cant: ${q} x $${p.p.toLocaleString()} = *$${sub.toLocaleString()}*\n`;
-                total += sub;
+                msg += `🔹 ${p.n}\n   ${q} x $${p.p.toLocaleString()} = *$${sub.toLocaleString()}*\n`;
+                subtotal += sub;
             }
         });
 
-        if(total === 0) return alert("Pedido vacío");
+        if(subtotal === 0) return alert("El pedido está vacío.");
 
         msg += `\n--------------------------------\n`;
-        msg += `*TOTAL A PAGAR: $${total.toLocaleString()}*\n`;
+        msg += `*TOTAL FACTURADO: $${subtotal.toLocaleString()}*\n`;
         msg += `--------------------------------\n`;
-        msg += `¡Gracias por su compra!\n\n`;
+        msg += `¡Muchas gracias por su pedido!\n\n`;
         msg += `_App desarrollada por Vibras Positivas_`;
 
         window.open(`https://wa.me/57317849331?text=${encodeURIComponent(msg)}`);
     }
+
+    render();
 </script>
 </body>
 </html>
